--- a/website/dsaii/templates/navigation.html
+++ b/website/dsaii/templates/navigation.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="#">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Blogs</a>
+          <a class="nav-link" href="{% url 'blogs' %}">Blogs</a>
         </li>
         <!-- Navbar dropdown -->
         <li class="nav-item dropdown">
