--- a/website/dsaii/templates/about.html
+++ b/website/dsaii/templates/about.html
@@ -3,7 +3,7 @@
   <div class="row justify-content-center mt-5" style="color: white;
   background: black;">
     <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center">
-      <h1 style="font: revert;font-size: xxx-large;">About Us!</h1>
+      <h1 style="font: revert;font-size: xxx-large;">TEAM</h1>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
       <script>
@@ -13,40 +13,81 @@
       </script>
       <style type="text/css">
         .carousel-inner img {
-          height: 289px;
+          height: 500px;
         }
       </style>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/static/img/res.png" class="d-block w-100" alt="...">
+            <img src="/static/first.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/static/img/res1.png" class="d-block w-100" alt="...">
+            <img src="/static/president.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/static/img/res2.png" class="d-block w-100" alt="...">
+            <img src="/static/secretary.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/vp.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/Treasurer.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/relead.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/recolead.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/reasso.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/techlead.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/techcolead.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/adcolead.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/adcolead2.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/grdes.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/grdes2.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/contentwr.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/webdev.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/01.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/o2.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/o3.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/o4.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/o5.png" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
     </div>
     <div class="col-md-10 col-sm-12 offset-md-1 p-4 text-center">
-      <p style="
-      color: wheat;
-    font-size: x-large;
-">
-        The restaurant is situated in the heart of the city. The restaurant gives you an ambience of the rural culture
-        and has a warm friendly feeling to it. The food is made to perfection, our chefs only cook with the freshest
-        ingredients, carefully sourced and provenance assured.
-        The restaurant is quite open planned but has more private dining areas. Online food delivery available during
-        pandemic. We all welcome welcome you to our restaurant and hoping to see you there.
-
-      </p>
 
   </div>
-  <div class="row justify-content-center mt-1">
-    
-    </div>
+
   </div>
 </div>
 {% endblock %}
