--- a/website/dsaii/templates/index.html
+++ b/website/dsaii/templates/index.html
@@ -2,19 +2,11 @@
  {% load static %}
 
 
-  <div class="row justify-content-center mt-5">
+<div class="container mb-5" >
+    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color:white; left: -203px; background:black; width: 376px; height: 648px; ">
+    <img src="/static/DL.png" style="height:225px; width:267px;">
+      <h1 style="font: revert;font-size: xx-large; color:white;"><br>DATA SCIENCE AND ARTIFICIAL INTELLIGENCE INQUISITIVE CLUB</h1>
 
-<div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="top: -41px;left: -269px;">
-
-      <a href = "#" href="https://fontmeme.com/graffiti-creator/"><img src="https://fontmeme.com/permalink/211024/d960698d79f579cc36141e8684987abe.png" alt="graffiti-creator" border="0"></a>
-
-    </div>
   </div>
-<div class="responsive">
-  <div class="row justify-content-center mt-5">
-    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="    left: 534px; top: -37px;" >
-<img src="/static/img/DL.png" >
 </div>
-</div>
-  </div>
 {% endblock %}
