--- a/website/dsaii/templates/base.html
+++ b/website/dsaii/templates/base.html
@@ -18,7 +18,7 @@
 
 </head>
 <link rel="icon" type="image/png" href="/static/DsaiiLogo.png">
-<body background="/static/bg.png" style="background-size: cover;" >
+<body background="/static/work.png" style="background-size: cover;" >
 {% include 'navigation.html' %}
   {% block content %}
 
