--- a/website/dsaii/templates/navigation.html
+++ b/website/dsaii/templates/navigation.html
@@ -1,42 +1,26 @@
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg black">
-  <!-- Container wrapper -->
-  <div class="container-fluid">
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="#" style="color:white;">DSAII</a>
+<nav class="navbar navbar-expand-lg navbar-dark black" style="width: 100%;">
 
-    <!-- Toggle button -->
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-mdb-toggle="collapse"
-      data-mdb-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <i class="fas fa-bars"></i>
-    </button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link waves-effect waves-light" href="{% url 'about' %}" >Team</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link waves-effect waves-light" href="#" >Events</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link waves-effect waves-light" href="{% url 'blogs' %}" >Blogs</a>
+      </li>
+    </ul>
 
-    <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- Left links -->
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" style="color:white;">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'about' %}" style="color:white;">Team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'blogs' %}" style="color:white;">Blogs</a>
-        </li>
-
-      <!-- Left links -->
-      </ul>
-    </div>
-    <!-- Collapsible wrapper -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'login' %}">DSAII</a>
+      </li>
+    </ul>
   </div>
-  <!-- Container wrapper -->
 </nav>
-<!-- Navbar -->
