--- a/website/dsaii/templates/navigation.html
+++ b/website/dsaii/templates/navigation.html
@@ -9,6 +9,9 @@
       <li class="nav-item">
         <a class="nav-link waves-effect waves-light" href="{% url 'about' %}" >Team</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link waves-effect waves-light" href="#" >Contact Us</a>
+      </li>
         <li class="nav-item">
         <a class="nav-link waves-effect waves-light" href="#" >Events</a>
       </li>
