--- a/website/dsaii/templates/login.html
+++ b/website/dsaii/templates/login.html
@@ -4,7 +4,9 @@
   <main>
         <div class="wrapper">
             <form action="">
-                <img src="/static/DL.png" alt="">
+                <img src="/static/DL.png" style="width: 100px;
+    height: 100px;
+    border-radius: 25%;">
                 <input type="email" placeholder="Enter Username"><br>
                 <input type="password" placeholder="Enter Password"><br>
                 <input type="submit" value="LOG IN"><br>
