--- a/website/dsaii/templates/index.html
+++ b/website/dsaii/templates/index.html
@@ -3,9 +3,16 @@
 
 
 <div class="container mb-5" >
-    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color:white; left: -203px; background:black; width: 376px; height: 648px; ">
+    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color:white; left: -203px; background:black; width: 376px; height: 761px; ">
     <img src="/static/DL.png" style="height:225px; width:267px;">
-      <h1 style="font: revert;font-size: xx-large; color:white;"><br>DATA SCIENCE AND ARTIFICIAL INTELLIGENCE INQUISITIVE CLUB</h1>
+      <h1 style="font: revert;font-size: xx-large; color:white;"><br>DATA SCIENCE AND ARTIFICIAL INTELLIGENCE INQUISITIVE CLUB</h1><br>
+        <h3>Contact us at:</h3>
+        <a href="https://www.instagram.com/dsaii.dit/">Instagram</a><br>
+        <a href="#">Gmail - dsaii.dit@gmail.com</a><br>
+        <a href="https://github.com/dsaii">Github</a><br>
+        <a href="https://chat.whatsapp.com/LnOuxnqYvdELA3NelRAPh7">WhatsApp</a><br>
+        <a href="https://discord.gg/HUV8K3pBqG">Discord</a><br>
+        <a href="https://t.me/dsaiidit">Telegram</a><br><br><br>
 
   </div>
 </div>
