--- a/website/dsaii/templates/article.html
+++ b/website/dsaii/templates/article.html
@@ -16,7 +16,7 @@
     No Comments Yet...
     <a href="{% url 'addc' post.pk %}">Add One</a>
 {% else %}
-        <a href="{% url 'addc' post.pk %}">Add Comment</a><br><br>
+        <a href="{% url 'addc' post.pk %}" button class="btn btn-secondary">Add Comment</a><br><br>
     {% for comments in post.comments.all %}
 <strong>
         {{ comments.name }} -
