--- a/website/dsaii/templates/login.html
+++ b/website/dsaii/templates/login.html
@@ -1,18 +1,70 @@
-{% extends 'base.html' %} {% block content %}
-    {% load static %}
-<link rel="stylesheet" href="{% static 'login.css' %}">
-  <main>
-        <div class="wrapper">
-            <form action="">
-                <img src="/static/DL.png" style="width: 100px;
-    height: 100px;
-    border-radius: 25%;">
-                <input type="email" placeholder="Enter Username"><br>
-                <input type="password" placeholder="Enter Password"><br>
-                <input type="submit" value="LOG IN"><br>
-                <span> <a href="#">Forgot Password?</a></span>
-            </form>
-        </div>
-    </main>
+{% extends "admin/base_site.html" %}
+{% load i18n static %}
 
-      {% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" href="{% static 'login.css' %}">
+{{ form.media }}
+<body background="/static/work.png" style="background-size: cover;" >
+
+{% endblock %}
+{% block bodyclass %}{{ block.super }} login{% endblock %}
+
+{% block usertools %}{% endblock %}
+
+{% block nav-global %}{% endblock %}
+
+{% block nav-sidebar %}{% endblock %}
+
+{% block content_title %}{% endblock %}
+
+{% block breadcrumbs %}{% endblock %}
+
+{% block content %}
+{% if form.errors and not form.non_field_errors %}
+<p class="errornote">
+{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}
+</p>
+{% endif %}
+
+{% if form.non_field_errors %}
+{% for error in form.non_field_errors %}
+<p class="errornote">
+    {{ error }}
+</p>
+{% endfor %}
+{% endif %}
+
+<div id="content-main">
+
+{% if user.is_authenticated %}
+<p class="errornote">
+{% blocktranslate trimmed %}
+    You are authenticated as {{ username }}, but are not authorized to
+    access this page. Would you like to login to a different account?
+{% endblocktranslate %}
+</p>
+{% endif %}
+
+<form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
+  <div class="form-row">
+    {{ form.username.errors }}
+    {{ form.username.label_tag }} {{ form.username }}
+  </div>
+  <div class="form-row">
+    {{ form.password.errors }}
+    {{ form.password.label_tag }} {{ form.password }}
+    <input type="hidden" name="next" value="{{ next }}">
+  </div>
+  {% url 'admin_password_reset' as password_reset_url %}
+  {% if password_reset_url %}
+  <div class="password-reset-link">
+    <a href="{{ password_reset_url }}">{% translate 'Forgotten your password or username?' %}</a>
+  </div>
+  {% endif %}
+  <div class="submit-row">
+    <input type="submit" value="{% translate 'Log in here' %}">
+  </div>
+</form>
+
+</div>
+</body>
+{% endblock %}
