--- a/website/dsaii/templates/navigation.html
+++ b/website/dsaii/templates/navigation.html
@@ -7,10 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link waves-effect waves-light" href="{% url 'about' %}" >Team</a>
+        <a class="nav-link waves-effect waves-light" href="{% url 'index' %}" >Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-effect waves-light" href="#" >Contact Us</a>
+        <a class="nav-link waves-effect waves-light" href="{% url 'about' %}" >Team</a>
       </li>
         <li class="nav-item">
         <a class="nav-link waves-effect waves-light" href="#" >Events</a>
