--- a/website/dsaii/templates/index.html
+++ b/website/dsaii/templates/index.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %} {% block content %}
  {% load static %}
+<!--<link rel="stylesheet" href = "http://www.w3schools.com/lib/w3.css"/>-->
+    <link rel="stylesheet" href="{% static 'index.css' %}">
 
 
-<div class="container mb-5" >
-    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color:white; left: -203px; background:black; width: 376px; height: 761px; ">
+
+
+
+    <div class="wrapper" >
+        <br>
+        <br>
     <img src="/static/DL.png" style="height:225px; width:267px;">
       <h1 style="font: revert;font-size: xx-large; color:white;"><br>DATA SCIENCE AND ARTIFICIAL INTELLIGENCE INQUISITIVE CLUB</h1><br>
         <h3>Contact us at:</h3>
@@ -15,5 +21,7 @@
         <a href="https://t.me/dsaiidit">Telegram</a><br><br><br>
 
   </div>
-</div>
+<br>
+<br>
+<br>
 {% endblock %}
