--- a/website/static/blogs.css
+++ b/website/static/blogs.css
@@ -18,4 +18,11 @@
     background: inherit;
     box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.2);
     filter: blur(10px);
+
 }
+
+@media (max-width: 480px){
+        .container{
+        left: 54%;
+        }
+    }
