--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -3,13 +3,13 @@
 <div class="container mb-5">
   <div class="row justify-content-center mt-5" style="color: white;
   background: black;">
-    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center">
+    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="left: -42px;">
       <h1 style="font: revert;font-size: xxx-large;">TEAM</h1>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
       <script>
         window.initializeCarousel = () => {
-          $("#carouselExampleSlidesOnly").carousel({ interval: 500 })
+          $("#carouselExampleSlidesOnly").carousel({ interval: 150 })
         }
       </script>
       <style type="text/css">
