--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
-    <div class="container" style="text-align: center;">
+    <div class="container" style="text-align: center; width: 714px;">
       <h1 style="font: revert;font-size: xxx-large; color: white;">TEAM</h1>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -11,8 +11,7 @@
       </script>
       <style type="text/css">
         .carousel-inner img {
-          height: 600px;
-          width: 500px;
+          height: 500px;
         }
       </style>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
