--- a/dsaii/templates/event.html
+++ b/dsaii/templates/event.html
@@ -2,10 +2,10 @@
 <div class="container" >
     <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color: white;text-align: center;">
         <h1 style="font-weight: 600;"> {{post.title}}</h1>
-            <ul style="color: white;font-size: xx-large;">         By: {{post.author.first_name}} {{post.author.name.name}}</ul><br/>
+            <ul style="color: white;font-size: xx-large;">         By: {{post.date}}</ul><br/>
         <hr style="color: white;">
 
-    <img src="{{ post.image.url }}" width="258" height="300"/>
+<!--    <img src="{{ post.img.url }}" width="258" height="300"/>-->
 
     <h3 style="color: white;">{{post.body}}</h3>
         <br>
@@ -14,9 +14,9 @@
 <h2 >Comments...</h2>
 {% if not post.comments.all %}
     No Comments Yet...
-    <a href="{% url 'addc' post.pk %}">Add One</a><br><br>
+    <a href="#">Add One</a><br><br>
 {% else %}
-        <a href="{% url 'addc' post.pk %}" button class="btn btn-secondary">Add Comment</a><br><br>
+        <a href="{% url 'ecomm' post.pk %}" button class="btn btn-secondary">Add Comment</a><br><br>
     {% for comments in post.comments.all %}
 <strong>
         {{ comments.name }} -
