--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -13,7 +13,7 @@
         <a class="nav-link waves-effect waves-light" href="{% url 'about' %}" >Team</a>
       </li>
         <li class="nav-item">
-        <a class="nav-link waves-effect waves-light" href="#" >Events</a>
+        <a class="nav-link waves-effect waves-light" href="{% url 'events' %}" >Events</a>
       </li>
       <li class="nav-item">
         <a class="nav-link waves-effect waves-light" href="{% url 'blogs' %}" >Blogs</a>
