--- a/dsaii/templates/events.html
+++ b/dsaii/templates/events.html
@@ -1,29 +1,44 @@
 {% extends 'base.html' %} {% block content %}
+{% load static %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'events.css' %}">
+<link rel="stylesheet" href = "https://unpkg.com/boxicons@latest/css/boxicons.min.css"/>
 
+<body>
+<div class="container" style="text-align: center; color: white;">
+    <h1 style="font-weight: bold;">EVENTS</h1>
+</div>
+    <section>
+        <div class="container">
+            <div class="card">
+                <div class="content">
+                    <div class="imgBox">
+                        <img src="/static/images/quiz.png">
+                     </div>
+                     <div class="contentBox">
+                         <br><h3>Quizomania<br><span>An online interactive quiz<br>2nd October 2021</span></h3>
+                     </div>
+                    <br>
+                    <a href="{% url 'quiz' %}"><input type="submit" value="View"></a>
+                </div>
 
-<div class="container" style="width: 400px;
-    height: 550px;
-    content: "";
-    position: absolute;
-    top: -25px;
-    left: -25px;
-    bottom: 0;
-    right: 0;
-    background: inherit;
-    box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.2);
-    filter: blur(10px);">
-    <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center" style="color: white;text-align: center;
-    position: absolute;
-    left: 41%;
-    top: 46%;
-    transform: translate(-50%, -50%);">
-<h1 style="font-weight: 600;">Events</h1>
-<ul>
-{% for post in object_list %}
-    <li style="font-size: x-large;font-weight: 400;">{{post.date}} - <a href = "{% url 'event' post.pk %}">{{post.title}}</a> - {{post.title_tag}}<br>
-    </li>
-{% endfor %}
-</ul>
-</div>
-</div>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBox">
+                        <img src="webdev.png">
+                     </div>
+                     <div class="contentBox">
+                         <br><h3>Coming Soon<br><span><br></span></h3>
+                     </div>
+                    <br>
+                </div>
+
+            </div>
+        </div>
+    </section>
+<br>
+<br>
+</body>
+
 {% endblock %}
