--- a/dsaii/templates/about.html
+++ b/dsaii/templates/about.html
@@ -203,7 +203,7 @@
                                 <img src="/static/01.png">
                             </div>
                              <div class="contentBox">
-                                 <br><h3>Gautami Kadam<br><span>Outreach Team</span></h3>
+                                 <br><h3>Gautami Kadam<br><span>Outreach Head</span></h3>
                              </div>
                         </div>
 
