--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -2,26 +2,71 @@
  {% load static %}
 <!--<link rel="stylesheet" href = "http://www.w3schools.com/lib/w3.css"/>-->
     <link rel="stylesheet" href="{% static 'index.css' %}">
+     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.googlestatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet" />
 
 
+<header>
+        <div class="glass">
+            <h1 class="h-glass">Data Science And</h1>
+           <div>
+                <br><h2>Vision<br>
+
+                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
+                <br><br>Mission<br>
 
-    <div class="wrapper" >
-        <br>
-        <br>
-    <img src="/static/DL.png" style="height:225px; width:267px;">
-      <h1 style="font: revert;font-size: xx-large; color:white;"><br>DATA SCIENCE AND ARTIFICIAL INTELLIGENCE INQUISITIVE CLUB</h1><br>
-        <h3>Contact us at:</h3>
-        <a href="https://www.instagram.com/dsaii.dit/">Instagram</a><br>
-        <a href="#">Gmail - dsaii.dit@gmail.com</a><br>
-        <a href="https://github.com/dsaii">Github</a><br>
-        <a href="https://chat.whatsapp.com/LnOuxnqYvdELA3NelRAPh7">WhatsApp</a><br>
-        <a href="https://discord.gg/HUV8K3pBqG">Discord</a><br>
-        <a href="https://t.me/dsaiidit">Telegram</a><br><br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </h2>
+                   </div>
+                      </div>
 
-  </div>
-<br>
-<br>
-<br>
+        <h1 class="h-regular">artificial intelligence inquisitive club</h1>
+
+
+        <nav>
+            <div class="container">
+                <div class="menu">
+                    <ul class ="social media">
+                        <li>
+                            <a href="https://www.instagram.com/dsaii.dit/" class="media-icon">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="media-icon">
+                                <i class="fab fa-google"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/dsaii" class="media-icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://chat.whatsapp.com/LnOuxnqYvdELA3NelRAPh7" class="media-icon">
+                                <i class="fab fa-whatsapp"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://discord.gg/HUV8K3pBqG" class="media-icon">
+                                <i class="fab fa-discord"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://t.me/dsaiidit" class="media-icon">
+                                <i class="fab fa-telegram"></i>
+                            </a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
 {% endblock %}
