--- a/dsaii/templates/footer.html
+++ b/dsaii/templates/footer.html
@@ -1,8 +1,9 @@
-<footer class="page-footer font-small black fixed-bottom">
+<footer class="page-footer font-small transparent fixed-bottom">
   <div class="footer-copyright text-center py-3">
     &copy; 2021 Copyright ASK:
     <!-- <a href="http://localhost:8000">Admin</a> -->
-    <a class="ml-3" href="#" style="font-size: large"> DSAII Login</a>
+          <a class="ml-3" href="{% url 'login' %}"><img src="/static/DL.png" style="height:80px; width:80px;"></a>
+
   </div>
 </footer>
 
