--- a/dsaii/templates/navigation.html
+++ b/dsaii/templates/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark black" style="width: 100%;">
+<nav class="navbar navbar-expand-lg navbar-dark transparent" style="width: 100%;">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -20,10 +20,5 @@
       </li>
     </ul>
 
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'login' %}">DSAII</a>
-      </li>
-    </ul>
   </div>
 </nav>
