--- a/static/index.css
+++ b/static/index.css
@@ -1,8 +1,185 @@
-.wrapper{
-    color:white;
-    width: 100%;
-    height: 750px;
-        text-align: center;
+body{
+    margin: 0;
+    font-family: 'Lato', sans-serif;
+}
 
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7))
+nav{
+    z-index: 99;
+    position: relative;
+    transition: 0.4s;
+}
+
+nav a{
+    text-decoration: none;
+    color: #1f1f1f;
+}
+
+nav .container{
+    max-width: 1150px;
+    padding: 1em 2em;
+    margin: 0 auto;
+}
+
+nav .menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav ul{
+    list-style-type: none;
+    padding: 0;
+    display: inline-block;
+}
+
+nav ul li{
+    display: inline-block;
+    margin: 0 0.5em;
+}
+
+nav ul a{
+    font-size: 0.8em;
+    text-transform: uppercase;
+}
+
+nav .container .menu-btn{
+    display: none;
+}
+
+.social-media a{
+    font-size: 1em;
+}
+
+header{
+    height: 100vh;
+    position: relative;
+    background: center no-repeat fixed;
+    overflow: hidden;
+    background-size: cover;
+}
+
+header h1{
+    position: absolute;
+    font-size: clamp(1.5rem, 4vw + 0.5rem, 12rem);
+    text-transform: lowercase;
+    letter-spacing: 5px;
+    font-weight: 700;
+    transform: translateY(-50%);
+    
+
+}
+
+.glass{
+    position: absolute;
+    width: 42%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255 , 255, 0.18);
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+}
+
+.h-glass{
+    background: url(work.png) center no-repeat fixed;
+    background-size: cover;
+    color:transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    top: 24%;
+    right: 0;
+    animation: text1 0.8s easi-in forwards;
+
+}
+
+.h-regular{
+    color: #fff;
+    top: 35%;
+    left: 42%;
+    animation: text2 0.8s ease-in forwards;
+    animation-delay: 500ms;
+
+}
+
+.glass > div{
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 1.5em;
+}
+
+.glass > div div{
+    margin: 0 1em;
+}
+
+.glass p{
+    color: #ccc;
+    font-size: 0.9em;
+    line-height: 27px;
+    max-width: 27em;
+}
+
+.glass h2{
+    color: #fff;
+    font-size: medium;
+    font-weight: normal;
+}
+
+.glass a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.glass a i{
+    margin-left: 0.2 em;
+}
+
+@media screen and (max-width: 750px) {
+
+
+    .glass{
+        width: 90%;
+        height: 90%;
+        min-height: 30em;
+        top: 48%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 15px;
+    }
+    
+    .h-glass{
+        right:9%;
+        top: 30%;
+        color: #1f1f1f;
+        background-attachment: initial;
+        background-size: 100% 130%;
+    }
+
+    .h-regular{
+        text-align: -webkit-center;
+    top: 39%;
+    left: 14px;
+    font-size: larger;
+    }
+
+    .glass > div{
+        margin-top: 4em;
+    }
+     nav{
+        left: 55px;
+        top: 13px;
+    }
+
+    .glass h2{
+        color: #fff;
+        font-size: x-small;
+        font-weight: normal;
+    }
 }
