--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -25,7 +25,7 @@
                    </div>
                       </div>
 
-        <h1 class="h-regular">artificial intelligence inquisitive club</h1>
+        <h1 class="h-regular">  Artificial Intelligence Inquisitive Club</h1>
 
 
         <nav>
