--- a/static/index.css
+++ b/static/index.css
@@ -61,7 +61,6 @@ header{
 header h1{
     position: absolute;
     font-size: clamp(1.5rem, 4vw + 0.5rem, 12rem);
-    text-transform: lowercase;
     letter-spacing: 5px;
     font-weight: 700;
     transform: translateY(-50%);
@@ -89,11 +88,11 @@ header h1{
 .h-glass{
     background: url(work.png) center no-repeat fixed;
     background-size: cover;
-    color:transparent;
+    color: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7));
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    top: 24%;
+    -webkit-text-fill-color: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7));
+    top: 30%;
     right: 0;
     animation: text1 0.8s easi-in forwards;
 
@@ -157,7 +156,7 @@ header h1{
     .h-glass{
         right:9%;
         top: 30%;
-        color: #1f1f1f;
+        color: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7));
         background-attachment: initial;
         background-size: 100% 130%;
     }
