--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -11,7 +11,7 @@
 
 <header>
         <div class="glass">
-            <h1 class="h-glass">Data Science And</h1>
+            <h1 class="h-glass">Data Science &</h1>
            <div>
                 <br><h2>Vision<br>
 
