--- a/dsaii/templates/index.html
+++ b/dsaii/templates/index.html
@@ -11,7 +11,7 @@
 
 <header>
         <div class="glass">
-            <h1 class="h-glass">Data Science &</h1>
+            <h1 class="h-glass">Data Science <br>And<br>Artificial Intelligence Inquisitive Club</h1>
            <div>
                 <br><h2>Vision<br>
 
@@ -25,7 +25,6 @@
                    </div>
                       </div>
 
-        <h1 class="h-regular">  Artificial Intelligence Inquisitive Club</h1>
 
 
         <nav>
