--- a/static/index.css
+++ b/static/index.css
@@ -60,7 +60,7 @@ header{
 
 header h1{
     position: absolute;
-    font-size: clamp(1.5rem, 4vw + 0.5rem, 12rem);
+    font-size: clamp(1.5rem, 4vw + 0.2rem, 12rem);
     letter-spacing: 5px;
     font-weight: 700;
     transform: translateY(-50%);
@@ -92,9 +92,10 @@ header h1{
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: rgba(0,0,0,0.5);
-    top: 30%;
+    top: 33%;
     right: 0;
     animation: text1 0.8s easi-in forwards;
+    text-align: center;
 
 }
 
@@ -154,11 +155,12 @@ header h1{
     }
     
     .h-glass{
-        right:13%;
+        right:0%;
         top: 30%;
         color: rgba(0,0,0,0.5);
         background-attachment: initial;
         background-size: 100% 130%;
+        font-size: revert;
     }
 
     .h-regular{
@@ -178,7 +180,7 @@ header h1{
 
     .glass h2{
         color: #fff;
-        font-size: x-small;
+        font-size: revert;
         font-weight: normal;
     }
 }
