--- a/static/index.css
+++ b/static/index.css
@@ -180,7 +180,7 @@ header h1{
 
     .glass h2{
         color: #fff;
-        font-size: revert;
+        font-size: 11px;
         font-weight: normal;
     }
 }
